tests/marouter/errors/false_options/missing_net/options.marouter
-d input_od_o.fma -o routes.rou.xml
